# nlp

./: .gitignore  pyproject.toml
1_regexp/: main.py  results.ipynb
2_fts/: Dockerfile  Makefile  main.py  out.txt
3_levenshtein/: Makefile  main.py  output.txt
4_multiword/: main.py
5_lm/: lab5.ipynb
6_classification/: lab6.ipynb
7_ner/: main.py
