[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["Maciej Trątnowiecki <mtratnowiecki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.0"
pandas = "^1.5.0"
isort = "^5.10.1"
jupyter = "^1.0.0"
elasticsearch-dsl = "^7.4.0"
spacy = {extras = ["cuda-autodetect"], version = "^3.4.3"}
morfeusz2 = "^1.99.6"
python-Levenshtein = "^0.20.8"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
